# kairos

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV-CHECKLIST.md  LICENSE  Makefile  README.md  SECURITY.md  copilot-instructions.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
docs/: architecture.md  glossary.md  pitch.html  product-overview.md  prototype.html  style-guide.html  test-strategy.md
scripts/: doctor.sh  rotate-creds.sh  seed.sh  setup.sh
services/cognition/: Dockerfile  README.md  pyproject.toml
services/cognition/src/kairos_cognition/: __init__.py  main.py
services/cognition/src/kairos_cognition/context/: __init__.py  composer.py
services/cognition/src/kairos_cognition/ego/: __init__.py  ego_loop.py
services/cognition/src/kairos_cognition/providers/: __init__.py  anthropic.py  base.py  openai.py  openrouter.py  pricing.py
services/cognition/src/kairos_cognition/revoice/: __init__.py  pipeline.py
services/cognition/src/kairos_cognition/router/: __init__.py  model_router.py
services/cognition/src/kairos_cognition/safety/: __init__.py  sanitizer.py
services/cognition/src/kairos_cognition/sandbox/: __init__.py  capability_token.py  egress_policy.py  resource_limits.py  service.py
services/cognition/src/kairos_cognition/tools/: __init__.py  base.py  file_ops.py  memory_ops.py  registry.py  result_sanitizer.py  shell_exec.py
services/cognition/tests/: test_context_composer.py  test_ego_loop.py  test_model_router.py  test_pricing.py  test_providers.py  test_revoice_pipeline.py  test_safety_sanitizer.py  test_sandbox_capability_token.py  test_sandbox_egress_policy.py  test_sandbox_resource_limits.py  test_sandbox_service.py  test_tool_file_ops.py  test_tool_memory_ops.py  test_tool_registry.py  test_tool_result_sanitizer.py  test_tool_shell_exec.py
services/vault/: Dockerfile  README.md  pyproject.toml
services/vault/src/kairos_vault/: __init__.py  auth.py  crypto.py  main.py  storage.py
services/vault/src/kairos_vault/routes/: aliases.py  health.py  metadata.py  resolve.py  rotate.py  store.py
services/vault/tests/: conftest.py  test_auth.py  test_crypto.py  test_routes.py  test_storage.py
(+161 files in other folders)
